--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
   "contributors": [],
   "scripts": {
     "dev": "nodemon",
-    "test": "mocha"
+    "test": "mocha",
+    "start" : "node index.js"
   },
   "dependencies": {
     "express": "^4.18.2",
