--- a/package.json
+++ b/package.json
@@ -26,9 +26,11 @@
   "scripts": {
     "dev": "nodemon",
     "test": "mocha",
-    "start" : "node index.js"
+    "start": "node index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "es6": "^0.0.7",
     "express": "^4.18.2",
     "mocha": "^10.2.0",
     "nodemon": "^3.0.1",
